# MX-ONMTF

./: EigGap.m  ExampleCode1.m  ExtractMontage.m  MX-ONMTF.m  MX_ONMTF.m  MX_ONMTF_real.m  MX_ONMTF_real_TESTING.mlx  ModDen.m  My5layersMultiplexOrthReal.m  My5layersMultiplexOrthSynt.m  My6layersMultiplexOrthReal.m  My6layersMultiplexOrthSynt.m  MyLlayersMultiplexOrthSynt.m  ONMTF.m  ONMTF_real.m  README.md  Steps.mlx  assigncomm.m  cEBM_networkLabels.xlsx  cEBM_step3_A_group2_fig1.fig  cEBM_step3_A_group2_fig2.fig  cEBM_step3_fig1_wFunction.fig  cEBM_step3_fig2_wFunction.fig  findingk.m  patchmult.m  prepareTopoPlots.m  step2_cluster_Identify.mlx  step3_updating.mlx  theta_theta_all.mat  timeline  topoplot.m
helpers/: EigGap.m  ModDen.m
matlab/: MX_ONMTF.m  MX_ONMTF_real.m  ONMTF.m  ONMTF_real.m  Steps.mlx  assigncomm.m  findingk.m  patchmult.m
matlab/examples/: demo_real.m  demo_synthetic.m
matlab/helpers/: EigGap.m  getNMI.m  normadj.m  rnorm.m  vec.m
python/: .gitignore  pyproject.toml
python/examples/: tutorial.py
python/src/mxonmtf/: __init__.py  __main__.py  community.py  evaluation.py  factorization.py  io.py  metrics.py  parameter_selection.py  single_layer.py  utils.py
python/tests/: conftest.py  test_community.py  test_evaluation.py  test_factorization.py  test_io.py  test_metrics.py  test_parameter_selection.py  test_single_layer.py  test_utils.py
