[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mxonmtf"
version = "0.1.0"
description = "Community detection in multiplex networks via Orthogonal Nonnegative Matrix Tri-Factorization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Meiby Ortiz-Bouza", email = "ortizbou@msu.edu"},
    {name = "Selin Aviyente"},
]
keywords = ["community-detection", "multiplex-networks", "matrix-factorization", "NMF", "graph-clustering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/ortizbou/MX-ONMTF"
Paper = "https://ieeexplore.ieee.org/abstract/document/10385068"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
